# schedulii

./: .Dockerignore  .dockerignore  .ecsTaskDef.json  .env.example  .gitignore  .prettierignore  Cargo.toml  Dockerfile  Makefile  README.md  appspec.yaml  create_tables.psql  docker-compose.yaml  docker-compose.yml  nx.json  package-lock.json  package-scripts.yml  package.json  pnpm-lock.yaml  populate.psql  tsconfig.base.json
.github/: pull_request_template.md
.github/workflows/: cd.yaml  ci-backend.yaml  ci-frontend.yaml  ci.yaml  main.yaml  main.yml
.husky/: pre-commit
.sqlx/: query-b1fa5689e9f5132369a6ea9d3d0d3df91276350c61b1003da8e6bdff47808b0f.json
apps/schedulii-ui/: Dockerfile  index.html  nginx.conf  project.json  vite.config.ts
apps/schedulii_api/: Cargo.toml  Dockerfile  project.json
apps/schedulii_api/src/: main.rs
apps/schedulii_api/src/handlers/: event_handler.rs
apps/schedulii_api/src/models/: app_state.rs  event.rs  mod.rs
assets/: create_tables.psql  populate.psql
backend/: go.mod  go.sum
backend/src/: app.go  google.go  main.go  main_test.go  wire.go  wire_gen.go
docs/: nx.md
frontend/: .eslintrc.js  .eslintrc.json  .prettierrc.json  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  index.tsx  reportWebVitals.ts
k8s-manifests/: init.sh  schedulii-ui.yaml  schedulii_api.yaml  schedulii_db.yaml  schedulii_db_config.yaml
libs/schedulii-components/: README.md  package.json  project.json  vite.config.ts
tools/database/: pre_load.sql  schema.sql
(+146 files in other folders)
