[package]
name = "schedulii_api"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6.20"
axum-prometheus = "0.4.0"
dotenvy = "0.15.7"
sqlx = {version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"]}
tokio = "1.34.0"
tower = "0.4.13"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
