[package]
name = "schedulii_api"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = {version = "0.6.20", features = ["macros"]}
axum-prometheus = "0.4.0"
dotenvy = "0.15.7"
serde = "1.0.193"
sqlx = {version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"]}
chrono = {version = "0.4.19", features = ["serde"]}
tokio = "1.34.0"
tower = "0.4.13"
uuid = {version = "1.6.1", features = ["v4"]}


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
